--- a/Styles.css
+++ b/Styles.css
@@ -8,18 +8,21 @@ html {
   background-color: hsl(212, 45%, 89%);
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
 .container {
   width: 375px;
   background-color: white;
   border-radius: 15px;
   padding: 15px;
-  margin: 0 auto;
-  margin-top: 100px;
-}
-
-.card {
-  width: 375px;
-  align-items: center;
+  /* margin: 0 auto; */
+  /* margin-top: 100px; */
 }
 
 .card-image {
@@ -54,3 +57,4 @@ p {
   color: hsl(228, 45%, 44%);
   margin: 0 auto;
 }
+
